Nangband Website changelog
==========================

05-07-02
--------
- Added a timing counter to the Nangband changes page for fun.  It
  needs gmtime.inc which is now in the content/ directory.
  (takkaria)
- Removed the "content lister" - I've chosen a different approach
  now. (takkaria)
- Really got the site valid, and added links to the validators at
  the bottom of the page. (takkaria)
- Reorganized stuff; now there are extras in "extras/"; this directory
  is scanned and all files are included from there.  (takkaria)

01-07-02
--------
- Cleaned up some code in layout.php - the links code is now much
  nicer; it'll get cleaned up even more when I have the time.
  (takkaria)
- Forgot to add the main page to CVS! (takkaria)
- Got the entire site valid to HTML 4.01 standards; this includes
  *both* stylesheets and all content.  I have too much free time!
  (takkaria)
- Started working on a "content lister".  Unfinished and broken.
  (takkaria)

30-06-02
--------
- Started keeping this changelog. (takkaria)
- Rewrote site to only have one PHP page which displays the appropriate
  content for each page.  Much cleaner than before.  Not tested!
  (takkaria)
- Tested.  Forgot a minor detail, but that's been fixed now :) 
  (takkaria)
- Changed a minor detail - I didn't mention that the daily compiles were
  Windows ports. (takkaria)
- Added a script to upload the latest CVS to the webserver. (takkaria)
- Added the basics of "themeability" at the user's end for the site.
  Silly, but never mind. (takkaria)
- Removed a comment in the changelog page about the RISC OS port being
  completely broken. (takkaria)
- Made cookies expire a few years after setting. (takkaria)
- Move the stylesheets into styles/. (takkaria)